Updated index and style files

--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ nav#menu-bar {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
 #hero-area {
-  background: url("home.jpeg");
+  background: url("images/home.jpeg");
   background-size: cover;
   height: 698px;
 }
